--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarik kerrou</title>
+    <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
-    Hello World
+    <div class="container">
+        <h1>Coming Soon</h1>
+        <p>We are working hard to bring you something amazing. Stay tuned!</p>
+        <div class="countdown">
+            <p>Launch in:</p>
+            <span class="time">00</span>:<span class="time">00</span>:<span class="time">00</span>
+        </div>
+    </div>
 </body>
 </html>
