--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Coming Soon</h1>
-        <p>We are working hard to bring you something amazing. Stay tuned!</p>
+        <p>I am working hard to bring you something amazing. Stay tuned!</p>
         <div class="countdown">
             <p>Launch in:</p>
             <span class="time">00</span>:<span class="time">00</span>:<span class="time">00</span>
